--- a/header.css
+++ b/header.css
@@ -107,18 +107,18 @@
 }
 
 /* user */
-.user {
+#header .user {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-.user div {
+#header .user div {
     text-align: right;
     color: var(--color-text);
 }
 
-.user img {
+#header .user img {
     max-width: 2.2rem;
     max-height: 2.2rem;
     border-radius: 2.2rem;
