remove text-decoration from badge, in case you want to make <a> as a badge

--- a/badge.css
+++ b/badge.css
@@ -2,6 +2,7 @@
     height: 1.2rem;
     line-height: 1.2rem;
     text-align: center;
+    text-decoration: none;
     font-size: 0.6rem;
     font-style: normal;
     border-radius: 0.6rem;
