--- a/9/custom.css
+++ b/9/custom.css
@@ -6,7 +6,7 @@ body {
 }
 
 #mission {
-    background: center / contain no-repeat url(../images/nova-mission.jpg);
+    background: center / contain no-repeat url(../images/nova-mission.png);
 }
 
 #header .user div {
